fix visibilita Registra e Reinvia, e configurazione invio Segnatura

--- a/core/seedoo_protocollo/static/src/css/protocollo.css
+++ b/core/seedoo_protocollo/static/src/css/protocollo.css
@@ -352,7 +352,7 @@
 }
 
 .btn_carica_documenti::before {
-    content:"\f0e0";
+    content:"\f093";
 }
 
 .protocollo_oggetto .oe_form_text_content{
